--- a/src/style/header.css
+++ b/src/style/header.css
@@ -10,6 +10,10 @@
   padding-left: 2em;
 }
 
+.jkhskjh{
+  padding: 1em !important;
+}
+
 .navbar-logo {
   font-size: 1.5em; /* 24px */
   font-weight: bold;
@@ -75,5 +79,6 @@
       display: block; /* Show hamburger icon on small screens */
   }
 }
+
 
 
