--- a/src/style/SearchForm.css
+++ b/src/style/SearchForm.css
@@ -2,7 +2,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    margin: 1.25em 0;
+    margin: 1.25em 0 30em;
   }
   
   .search-form {
