--- a/src/style/imageSlider.css
+++ b/src/style/imageSlider.css
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100vh; /* Full viewport height */
     z-index: -1; /* Send the slider to the background */
+    margin-top: 4em;
   }
   
   .image-slider img {
