--- a/src/style/imageSlider.css
+++ b/src/style/imageSlider.css
@@ -1,15 +1,70 @@
+.slider {
+  position: relative;
+  width: 100%;
+}
+
 .image-slider {
-    position: fixed; /* Makes it stay behind other components */
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh; /* Full viewport height */
-    z-index: -1; /* Send the slider to the background */
-    margin-top: 4em;
-  }
-  
-  .image-slider img {
-    width: 100%;
-    height: 100vh; /* Full height of the viewport */
-    object-fit: cover; /* Ensures the images are fully covered and scaled properly */
-  }
+  position: absolute;
+  z-index: -1;
+  height: 100vh;
+}
+
+.items {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-bottom: 56.25%;
+  height: 100vh;
+}
+
+.item {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 0.6s ease-in-out;
+}
+
+.item.current {
+  opacity: 1;
+}
+
+.item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.dots {
+  position: absolute;
+  bottom: -1.25em;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 0.625em;
+}
+
+.dot {
+  display: block;
+  width: 0.625em;
+  height: 0.625em;
+  border-radius: 50%;
+  border: none;
+  outline: none;
+  padding: 0;
+  background: #777;
+  cursor: pointer;
+  opacity: 0.5;
+  transition: opacity 0.4s ease-in-out;
+}
+
+.dot:nth-child(n + 2) {
+  margin-left: 0.3125em;
+}
+
+.dot.current {
+  opacity: 1;
+}
