--- a/src/style/SearchForm.css
+++ b/src/style/SearchForm.css
@@ -6,6 +6,7 @@
   }
   
   .search-form {
+    position: fixed;;
     gap: 1em;
     display: flex;
     background-color: white;
@@ -16,7 +17,7 @@
     border-radius: 0.3125em;
     box-shadow: 0 0.125em 0.25em rgba(0, 0, 0, 0.1);
     align-items: center;
-    margin: 7em;
+    margin: 10em;
 }
   
   .input-group {
