--- a/src/style/header.css
+++ b/src/style/header.css
@@ -8,7 +8,11 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 100;
+  z-index: 99999;
+}
+
+.modal-content{
+  margin-top: 8em !important;
 }
 
 .jkhskjh {
