--- a/src/style/Login.css
+++ b/src/style/Login.css
@@ -9,7 +9,6 @@
   top: 0;
   left: 0;
   padding: 0 1em;
-  margin: 5em;
 }
 
 .login-box {
@@ -23,7 +22,7 @@
   padding: 2.5em;
   border-radius: 0.625em;
   text-align: center;
-  z-index: 100;
+  /* z-index: 100; */
 }
 
 .login-container h2 {
@@ -82,7 +81,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1000;
+  /* z-index: 1000; */
 }
 
 .modal-content {
