--- a/src/style/Signup.css
+++ b/src/style/Signup.css
@@ -22,7 +22,7 @@
   padding: 2.5em;
   border-radius: 0.625em;
   text-align: center;
-  z-index: 100;
+  /* z-index: 100; */
 }
 
 .signup-container h2 {
@@ -81,7 +81,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1000;
+  /* z-index: 1000; */
 }
 
 .modal-content {
