home page chnage

--- a/src/style/AutoSuggestion.css
+++ b/src/style/AutoSuggestion.css
@@ -1,10 +1,10 @@
 .autocomplete-wrapper {
-  position: relative; 
+  position: relative;
   width: 100%;
 }
 
 input {
-  width: 100%; 
+  width: 100%;
   padding: 0.5em;
   border: 0.0625em solid #ccc;
   border-radius: 0.25em;
@@ -12,13 +12,13 @@ input {
 
 .suggestions-list {
   position: absolute;
-  top: 100%; 
+  top: 100%;
   left: 0;
-  width: 100%; 
+  width: 100%;
   background-color: white;
   border: 0.0625em solid #ccc;
   border-radius: 0.25em;
-  /* z-index: 1000;  */
+  z-index: 1000;
   list-style: none;
   padding: 0;
   margin: 0;
