--- a/src/style/Section1.css
+++ b/src/style/Section1.css
@@ -1,112 +1,112 @@
 .section1-container {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    background-color: #FFB933;
-    padding: 7em;
-    z-index: 9999;
-    margin-top: 50em;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffb933;
+  padding: 7em;
+  z-index: 9999;
+  margin-top: 30em;
 }
 
 .section1-images {
-    display: flex;
-    position: relative;
-    gap: 1em;
-    margin-bottom: 2em;
+  display: flex;
+  position: relative;
+  gap: 1em;
+  margin-bottom: 2em;
 }
 
 .section1-image {
-    width: 12.5em;
-    height: 18.75em;
-    object-fit: cover;
-    border-radius: 0.625em;
-    transform: skew(-10deg);
+  width: 12.5em;
+  height: 18.75em;
+  object-fit: cover;
+  border-radius: 0.625em;
+  transform: skew(-10deg);
 }
 
 .center-image {
-    transform: scale(1.1) skew(-10deg);
+  transform: scale(1.1) skew(-10deg);
 }
 
 .section1-text {
-    color: black;
-    max-width: 25em;
-    text-align: center;
+  color: black;
+  max-width: 25em;
+  text-align: center;
 }
 
 .section1-subtitle {
-    font-size: 1.2em;
-    margin-bottom: 0.5em;
+  font-size: 1.2em;
+  margin-bottom: 0.5em;
 }
 
 .section1-title {
-    font-size: 3em;
-    margin-bottom: 1em;
+  font-size: 3em;
+  margin-bottom: 1em;
 }
 
 .section1-link {
-    color: white;
-    text-decoration: none;
-    font-size: 1.1em;
-    border-bottom: 0.0625em solid white;
-    padding-bottom: 0.2em;
+  color: white;
+  text-decoration: none;
+  font-size: 1.1em;
+  border-bottom: 0.0625em solid white;
+  padding-bottom: 0.2em;
 }
 
 .section1-link:hover {
-    border-bottom: 0.0625em solid transparent;
+  border-bottom: 0.0625em solid transparent;
 }
 
 @media (max-width: 48em) {
-    .section1-container {
-        padding: 4em;
-        flex-direction: column;
-    }
-    
-    .section1-images {
-        flex-direction: column;
-        gap: 2em;
-    }
+  .section1-container {
+    padding: 4em;
+    flex-direction: column;
+  }
 
-    .section1-image {
-        width: 100%;
-        height: auto;
-        transform: skew(-5deg);
-    }
+  .section1-images {
+    flex-direction: column;
+    gap: 2em;
+  }
 
-    .center-image {
-        transform: scale(1) skew(-5deg);
-    }
+  .section1-image {
+    width: 100%;
+    height: auto;
+    transform: skew(-5deg);
+  }
 
-    .section1-text {
-        max-width: 100%;
-        text-align: center;
-    }
+  .center-image {
+    transform: scale(1) skew(-5deg);
+  }
 
-    .section1-title {
-        font-size: 2.5em;
-    }
+  .section1-text {
+    max-width: 100%;
+    text-align: center;
+  }
 
-    .section1-link {
-        font-size: 1em;
-    }
+  .section1-title {
+    font-size: 2.5em;
+  }
+
+  .section1-link {
+    font-size: 1em;
+  }
 }
 
 @media (max-width: 30em) {
-    .section1-container {
-        padding: 2em;
-        flex-direction: column;
-    }
+  .section1-container {
+    padding: 2em;
+    flex-direction: column;
+  }
 
-    .section1-title {
-        font-size: 2em;
-    }
+  .section1-title {
+    font-size: 2em;
+  }
 
-    .section1-subtitle {
-        font-size: 1em;
-    }
+  .section1-subtitle {
+    font-size: 1em;
+  }
 
-    .section1-link {
-        font-size: 0.9em;
-    }
+  .section1-link {
+    font-size: 0.9em;
+  }
 }
