--- a/src/style/SearchForm.css
+++ b/src/style/SearchForm.css
@@ -29,6 +29,8 @@
   border-radius: 0.3125em;
   box-shadow: 0 0.125em 0.25em rgba(0, 0, 0, 0.1);
   align-items: center;
+  gap: 0.2em;
+
 }
 
 .input-group {
