--- a/src/style/signUpPage.css
+++ b/src/style/signUpPage.css
@@ -44,7 +44,7 @@
     display: flex;
     flex-direction: column;
     background-color: white;
-    border-radius: 15px 0 0 15px;
+    border-radius: 15px 14px 16px 15px;
     padding: 35px 40px;
     width: 445px;
     max-width: 90%;
