--- a/src/style/LoginPage.css
+++ b/src/style/LoginPage.css
@@ -50,10 +50,10 @@
     display: flex;
     flex-direction: column;
     background-color: white;
-    border-radius: 15px 0 0 15px;
+    border-radius: 15px 14px 16px 15px;
     padding: 35px 40px;
     width: 445px;
-    max-width: 90%;
+    max-width: 100%;
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
   }
   
