--- a/src/style/PopularSearches.css
+++ b/src/style/PopularSearches.css
@@ -5,7 +5,7 @@
 }
 
 .popular-searches h2 {
-  font-size: 24px;
+  font-size: 22px;
   margin-bottom: 20px;
   text-align: left;
   padding-left: 0.1em;
@@ -25,18 +25,31 @@
 .search-cards {
   display: flex;
   overflow-x: auto;
+  overflow-y: hidden;
   scroll-behavior: smooth;
+  padding: 0 0 8px 4px;
 }
 
 .search-card {
   min-width: 200px;
+  border-radius: 9px;
   margin-right: 20px;
   text-align: center;
+  box-shadow: 0 0.125em 0.625em rgba(0, 0, 0, 0.1);
+  padding: 8px;
+  opacity: 0; /* Initially hidden */
+  transform: translateY(20px); /* Start from 20px below */
+  transition: opacity 1s ease-out, transform 1s ease-out;
+}
+
+.search-card.animate {
+  opacity: 1; /* Fade in */
+  transform: translateY(0); /* Slide to original position */
 }
 
 .search-image {
   width: 100%;
-  height: auto;
+  height: 12em;
   border-radius: 8px;
 }
 
@@ -56,6 +69,14 @@
   justify-content: center;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
   color: #333;
+  opacity: 0; /* Initially hidden */
+  transform: scale(0.5); /* Initially scaled down */
+  transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+.search-container2:hover .scroll-button {
+  opacity: 1; /* Show the buttons on hover */
+  transform: scale(1); /* Scale to original size */
 }
 
 .scroll-button.left {
