--- a/src/style/PopularVenueSearches.css
+++ b/src/style/PopularVenueSearches.css
@@ -22,8 +22,10 @@
   display: flex;
   overflow-x: auto;
   gap: 20px;
-  padding: 10px 0;
+  padding: 10px 10px;
+  overflow-y: hidden;
   scroll-behavior: smooth;
+  transition: transform 0.3s ease-in-out;
 }
 
 .venue-card {
@@ -34,8 +36,16 @@
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   background-color: #fff;
   padding: 10px;
+  opacity: 0;
+  transform: translateY(20px); /* Start position for animation */
+  transition: opacity 0.5s ease-out, transform 0.5s ease-out; /* Add transition for smooth fade-in */
 }
 
+/* Animation for when the card enters the viewport */
+.venue-card.animate {
+  opacity: 1;
+  transform: translateY(0); /* End position after animation */
+}
 .venue-image {
   width: 100%;
   height: 12em;
@@ -81,6 +91,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  opacity: 0;
+  animation: fadeIn 0.5s ease forwards;
 }
 
 .scroll-button:hover {
@@ -91,10 +103,24 @@
 /* Position left and right buttons */
 .scroll-button.left {
   left: 10px;
+  animation-delay: 0.2s;
 }
 
 .scroll-button.right {
   right: 10px;
+  animation-delay: 0.2s;
+}
+
+/* Animation for fade-in effect */
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .venue-cards::-webkit-scrollbar {
