--- a/src/style/SearchForm.css
+++ b/src/style/SearchForm.css
@@ -10,6 +10,11 @@
   /* animation: fadeIn 1s forwards, slideInFromLeft 1s 0.5s forwards; */
 }
 
+.zindex-minus{
+  z-index: -1;
+}
+
+
 .search-header {
   text-align: center;
   margin-bottom: 20px;
